# TrabalhoFinalLPII

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: arquitetura.md
docs/diagramas/: broadcast_direto.mmd  componentes.mmd  concorrencia.mmd  log_init.mmd  seq_mensagem.mmd
examples/: client_simple.cpp
include/: tslogger.hpp
scripts/: gen_diagrams.sh  run_logging_demo.sh  spawn_clients.sh
src/: main_logging_demo.cpp  main_server.cpp  tslogger.cpp
